# uls

./: CMakeLists.txt  Makefile  README.md  mx_lines_count.c  r  t  uls  w
inc/: uls.h
libmx/: Makefile  libmx.h  mx_pop_front.c
libmx/inc/: libmx.h
libmx/src/: mx_bubble_sort.c  mx_del_strarr.c  mx_pop_front.c  mx_sort_list.c  mx_strlen.c
src/: main.c  mx_change_argv.c  mx_check_for_flags.c  mx_check_for_slesh.c  mx_clear_list.c  mx_compare.c  mx_dir_name_print.c  mx_err_print.c  mx_flag_d.c  mx_flag_l.c  mx_flag_one.c  mx_flag_p.c  mx_flags_obnulyator.c  mx_flags_trig.c  mx_is_ascii.c  mx_l_out_st_blocks.c  mx_l_out_st_dev.c  mx_l_out_st_gid.c  mx_l_out_st_mode.c  mx_l_out_st_mtime.c  mx_l_out_st_nlink.c  mx_l_out_st_size.c  mx_l_out_st_uid.c  mx_len_int.c  mx_lines_count.c  mx_list_reverse.c  mx_list_swap.c  mx_longest_name.c  mx_max_len_char.c  mx_max_len_int.c  mx_print_uls.c  mx_r_bubble_sort.c  mx_read_directory.c  mx_read_uls.c  mx_sort_by_size.c  mx_sort_by_time.c  mx_sort_for_columns.c  mx_strjoin_for_path.c  mx_vivod_total.c  mx_write_uls.c  (+1 more)
